--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./CSS/lavamenos.css">
+    <!-- Iconos -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
 
@@ -53,10 +55,10 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Item</th>
-                        <th scope="col">Cantidad</th>
+                        <th scope="col">ID</th>
                         <th scope="col">Servicio</th>
+                        <th scope="col">Cantidad</th>
+                        <th scope="col">Precio</th>
                         <th scope="col">Total</th>
                     </tr>
                 </thead>
@@ -88,15 +90,16 @@
                     <td>Café</td>
                     <td>1</td>
                     <td>1</td>
-                    <button class="btn btn-danger btn-sm">
+                    <button class="btn btn-danger btn-sm" id="trashcan">
                         <span class="material-symbols-outlined">delete
                         </span>
                     </button>
                     <td>$ <span class="res-cant-prec">500</span></td>
                 </tr>
             </template>
+            <div id="form-recoleccion">
+            </div>
         </div>
-        
 
         <div id="laundry-card">
         </div>
