optimizando con operadores avanzados

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Realiza tu Cotización</h2>
         <div class="cotizacion-precios">
             <!-- Tabla -->
-            <table class="table">
+            <table class="table" id="tableTable">
                 <thead>
                     <tr>
                         <th scope="col">ID</th>
@@ -90,8 +90,8 @@
                     <td>Café</td>
                     <td>1</td>
                     <td>1</td>
-                    <button class="btn btn-danger btn-sm" id="trashcan">
-                        <span class="material-symbols-outlined">delete
+                    <button class="btn btn-danger btn-sm" >
+                        <span class="material-symbols-outlined" id="trashcan">delete
                         </span>
                     </button>
                     <td>$ <span class="res-cant-prec">500</span></td>
