utilice fetch para adquirir comentarios

--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
 
 
     </section>
+    <hr>
+    <div  id="response" class="comentarios">
+        <h4>Comentarios de clientes:</h4>
+    
+    </div>
 
 
     <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320">
